nlamah/src/main/resources/org/nlamah/QLS/test/error/doubledeclarationerror.qls
stylesheet test
{
	page test
	{
		section "test"
		{
			section "test"
			{
				question question1
			}
		}
	}
	
	page test
	{
		section "test"
		{
			section "test"
			{
				section "test"
				{	
					question question1
				}
			}
		}
	}
}